--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <label for="text-input">Enter in text to check for a palindrome:
             </label>
             <input class="palindrome-input" id="text-input" value="" type="text">
-            <button class="palindrome-btn" id="check-btn">Check</button>
+            <button class="palindrome-btn" id="check-btn">Check</button><br>
             <div class="results-div" id="result">
                 <p class="user-input"><strong>hi</strong> is not a palindrome.</p>
             </div>
